# discord-emb-search

./: .gitignore  Dockerfile  README.md  docker-compose.yml  environment.yml  pyproject.toml
src/discord_embed_bot/: bot.py  embedding.py
