[tool.black]
line-length = 140

[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "discord-embed-bot"
version = "0.1.0"
description = "Discord bot for storing messages and searching in them using embeddings."
authors = [
    {name="yasin", email="ytatar9@googlemail.com"}
]
readme = "README.md"
license = {"text"="MIT"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
discord-embed-bot = "discord_embed_bot.bot:main"

